PROD_10-24-19/force-app/main/default/objects/Partner_Rating_BFIN__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Third Party Service Ratings</relationshipLabel>
    <relationshipName>Partner_Ratings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>