PROD_10-24-19/force-app/main/default/objects/Partner_Rating_BFIN__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Partner_Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>