PROD_10-24-19/force-app/main/default/objects/Partner_Rating_BFIN__c/fields/Partner_Entity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Entity__c</fullName>
    <label>Partner Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Equity Investor</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>EPC Contractor</fullName>
            </value>
            <value>
                <fullName>Facilities Maintenance Provider</fullName>
            </value>
            <value>
                <fullName>Equipment Supplier</fullName>
            </value>
            <value>
                <fullName>Design Firm</fullName>
            </value>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Technical Advisor</fullName>
            </value>
            <value>
                <fullName>Legal Advisor</fullName>
            </value>
            <value>
                <fullName>Model Auditor</fullName>
            </value>
            <value>
                <fullName>Insurance Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>