PROD_10-24-19/force-app/main/default/objects/Partner_Rating_BFIN__c/fields/Transaction_Size__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Size__c</fullName>
    <label>Transaction Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;= $100MM</fullName>
            </value>
            <value>
                <fullName>$100MM - $250MM</fullName>
            </value>
            <value>
                <fullName>$250MM - $500MM</fullName>
            </value>
            <value>
                <fullName>$500MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>